# Testkube

./: README.md  index.html  package.json  vite.config.js
app1/: .env  main.py  pyproject.toml  settings.py
app2/: .env  app2-config.yaml  main.py  pyproject.toml  settings.py
app3/: default.conf  index.html  nginx-pod.yaml  package-lock.json  vite.config.js
app3/src/: App.jsx  main.jsx
app3/src/hooks/: Authprovider.jsx
app3/src/pages/: Home.jsx
app3/src/utils/: network.js
src/: App.jsx
