[project]
name = "app2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib>=1.6.8",
    "fastapi[standard]>=0.133.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "kafka>=1.3.5",
    "kafka-python>=2.3.0",
    "mariadb>=1.1.14",
    "pydantic-settings>=2.13.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.22",
    "redis>=7.2.1",
]
